# vibewall

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: allowlist.txt  blocklist.txt  pypi_allowlist.txt  pypi_blocklist.txt  rules.txt  url_allowlist.txt  url_blocklist.txt  vibewall.toml
src/vibewall/: __init__.py  __main__.py  cli.py  config.py  console.py  exceptions.py  models.py  notifications.py  prompter.py
src/vibewall/cache/: merge.py  serde.py  store.py
src/vibewall/llm/: client.py  history.py  prompt.py
src/vibewall/proxy/: addon.py  server.py
src/vibewall/validators/: action.py  allowlist.py  base.py  npm.py  rules.py  runner.py  url.py
src/vibewall/validators/checks/: __init__.py  _osv.py  _registry_base.py  npm_advisories.py  npm_age.py  npm_allowlist.py  npm_blocklist.py  npm_downloads.py  npm_existence.py  npm_registry.py  npm_rules.py  npm_typosquat.py  pypi_advisories.py  pypi_age.py  pypi_allowlist.py  pypi_blocklist.py  pypi_downloads.py  pypi_existence.py  pypi_registry.py  pypi_rules.py  pypi_typosquat.py  url_allowlist.py  url_blocklist.py  url_dns.py  url_domain_age.py  url_rules.py
tests/: conftest.py  helpers.py  test_addon.py  test_allowblocklist.py  test_cache.py  test_cache_merge.py  test_cache_serde.py  test_checks_npm.py  test_checks_npm_advisories.py  test_checks_pypi.py  test_checks_pypi_advisories.py  test_checks_url.py  test_config.py  test_integration.py  test_llm.py  test_new_features.py  test_notifications.py  test_npm_validator.py  test_osv.py  test_rules.py  test_runner.py  test_url_validator.py
wheels/: mitmproxy_linux-0.12.9-py3-none-musllinux_1_2_x86_64.whl
