[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibewall"
version = "0.1.0"
description = "Hallucination firewall for AI coding agents"
requires-python = ">=3.14"
dependencies = [
    "mitmproxy>=10",
    "aiohttp",
    "python-whois",
    "rapidfuzz",
    "click",
    "structlog",
    "rich",
]

[project.scripts]
vibewall = "vibewall.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vibewall"]

[tool.uv]
find-links = ["wheels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpserver",
    "aioresponses",
]
